# student_performance

./: .flake8  .gitignore  README.md  TASK.md  coverage.txt  main.py  pyproject.toml
student_performance/: __init__.py  cli.py  io.py  registry.py  table.py
student_performance/reports/: __init__.py  student_performance.py
tests/: test_cli.py
